[package]
name = "tlsn-noir-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bb-service-rs = { git = "https://github.com/OpacityLabs/bb-service.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

